--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     src: url("./fonts/CircularStd-Book.otf") format("opentype");
 }
 
-body{
+body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -66,7 +66,7 @@ body{
     text-shadow: rgba(0, 0, 0, .4) 1px 1px 1px;
 }
 
-.question-inner{
+.question-inner {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -76,19 +76,25 @@ body{
     transition: all 2s;
     border: solid #fff 1px;
     padding: 30px 20px;
-    border-radius: 3px;    
+    border-radius: 3px;
 }
 
-.question-title{
+.question-title {
     font-size: 3em;
     color: #fff;
 }
 
-.question-text{
+.question-text {
     font-size: 1.6em;
     line-height: 1.4;
     padding: 8px 0;
     color: #fff;
+}
+
+.question-answered {
+    top: -50vh;
+    transition: all 2s;
+    animation: ease-in;
 }
 
 .outside-up {
