--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
     font-family: 'CircularStdBook', sans-serif;
 }
 
-.welcome-inner, .all-done {
+.welcome-inner {
     position: absolute;
     top: 45%;
     left: 50%;
@@ -124,14 +124,69 @@ body {
 
 .outside-viewport-up {
     top: -50vh;
-    transition: all 2s;
-    animation: ease-in;
+    opacity: 0;
+    transition: all 1.4s;
 }
 
 .outside-viewport-down {
     top: 160vh;
+    transition: all 1.4s;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.5);
+    transition: all 0.8s;
+  }
+
+.overlay .overlay-inner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 30%;
+    height: auto;
+    transform: translate(-50%, -50%);
     transition: all 2s;
-    animation: ease-in;
+    border: solid #fff 1px;
+    padding: 30px 20px;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.overlay .overlay-inner .overlay-image img{
+    display: block;
+    margin: auto;
+    height: 100px;
+    padding-bottom: 24px;
+}
+
+.overlay .overlay-inner .overlay-title {
+    text-align: center;
+    font-size: 2em;
+    color: #8c8c8c;
+    padding-bottom: 16px;
+}
+
+.overlay .overlay-inner .overlay-text {
+    display: block;
+    margin: auto;
+    text-align: center;
+    width: 75%;
+    font-size: 1em;
+    line-height: 1.4;
+    color: #8c8c8c;
+}
+
+.overlay-hidden {
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 1s;
 }
 
 .question-inner .done-image {
